--- a/views/login.ejs
+++ b/views/login.ejs
@@ -3,13 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <title>Project Fido2020, Login</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
         <h1>FidoNet2020</h1>
     </header>
     <main>
+        <% if (session.error) { %>
+            <section class="error">
+                <%= session.error %>
+                <% delete session.error; %>
+            </section>
+        <% } %>
         <form action="/login" method="POST">
             <label>
                 Login:<br>
